--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
+.app {
+  background-color: #bcf1ff;
+  min-height: 80vh;
+  width: 400px;
+  margin: 20px auto;
+}
+body {
+  background-color: #00c3b5;
+}
+
+.crossed {
+  text-decoration: line-through 2px red;
+  background-color: #e0f9fe;
+}
+
+li, ul {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+  color:#e83e24;
+  font-size: 28px;
   text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  color: #e83e24;
+  font-family: 'Poppins', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+span {
+  color: #b15bd8;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.add {
+  margin-top: 5px;
+  background-color: #ffa300;
+  padding: 8px;
+  border: none;
+  border-radius: 10px;
+  width: 70%;
+  color: #fefeff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clear {
+  margin-bottom: 5px;
+  background-color: #b15bd8;
+  padding: 8px;
+  border: none;
+  width: 70%;
+  color: #fefeff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  border-radius: 10px;
 }
+
+input {
+  flex: 1;
+  padding: 8px;
+  margin: 10px;
+  font-family: 'Poppins', sans-serif;
+  background-color: #bcf1ff;
+  border-radius: 10px; 
+}
+
